# wip

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Makefile  README.md  WIP_SPEC.md  build.rs  wezterm.md
src/: config.rs  fast_mode.rs  index.rs  install_mode.rs  keychain.rs  main.rs  stats_mode.rs  util.rs
src/scan_mode/: jsonl_parser.rs  lm_assessment.rs  lm_summarizer.rs  mod.rs
src/user_mode/: mod.rs  tui.rs
