[package]
name = "wip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
dirs = "5"
dotenvy = "0.15"

[dev-dependencies]
