[package]
name = "wip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wip"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
dirs = "6"
fd-lock = "4"
dotenvy = "0.15"
ratatui = "0.30"
crossterm = "0.29"
secret-service = { version = "5.1.0", default-features = false, features = ["rt-tokio-crypto-rust"] }

[dev-dependencies]
tempfile = "3"
